<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tododetail.ToDoDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIncludedIds">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_id_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/colon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_colon"
                app:layout_constraintStart_toEndOf="@+id/label_id_user"
                app:layout_constraintStart_toStartOf="@+id/colon2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/tv_id_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/colon1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <TextView
                android:id="@+id/label_id_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/colon2"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/colon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_colon"
                app:layout_constraintStart_toEndOf="@+id/label_id_task"
                app:layout_constraintTop_toTopOf="@+id/tv_id_task"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/tv_id_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/colon2"
                app:layout_constraintTop_toBottomOf="@+id/tv_id_user"
                tools:text="1" />

            <TextView
                android:id="@+id/label_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/colon3"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/colon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_colon"
                app:layout_constraintStart_toStartOf="@+id/colon2"
                app:layout_constraintTop_toTopOf="@+id/tv_task"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/tv_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/colon3"
                app:layout_constraintTop_toBottomOf="@+id/tv_id_task"
                tools:text="1" />

            <TextView
                android:id="@+id/label_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/colon4"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/colon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_colon"
                app:layout_constraintStart_toStartOf="@+id/colon3"
                app:layout_constraintTop_toTopOf="@+id/tv_status"
                tools:ignore="DuplicateIncludedIds" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_rounded"
                android:backgroundTint="@color/orange"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/colon4"
                app:layout_constraintTop_toBottomOf="@+id/tv_task"
                tools:text="TODO" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>